<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.zawraaadmin.models.LoginModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity_login.LoginActivity"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".05"
            android:transitionName="logo"
            tools:ignore="UnusedAttribute"
            android:src="@drawable/logo"
            />


        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"

            >
            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp"

                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintEnabled="false"
                        app:startIconTint="@color/colorPrimary"
                        app:startIconDrawable="@drawable/ic_mail"
                        >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:textSize="15sp"
                        android:ellipsize="end"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/email"
                        android:textColorHint="@color/gray4"
                        android:background="@color/transparent"
                        android:text="@={model.email}"
                        error="@{model.email}"
                        />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                app:contentPaddingLeft="8dp"
                app:contentPaddingRight="8dp"

                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:passwordToggleTint="@color/colorPrimary"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:startIconTint="@color/colorPrimary"
                    app:startIconDrawable="@drawable/ic_lock"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:hint="@string/password"
                        android:textSize="14sp"
                        android:textColorHint="@color/gray4"
                        android:textColor="@color/colorPrimary"
                        android:text="@={model.password}"
                        error="@{model.error_password}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:background="@drawable/btn_change_lang"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
