<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.zawraaadmin.models.UserModel" />

        <variable
            name="lang"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                >
                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_left_arrow"
                        android:padding="3dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        android:visibility="invisible"

                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/back"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_weight="1"
                        android:visibility="invisible"

                        />
                    <ImageView
                        android:id="@+id/imagelogout"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                      android:layout_marginEnd="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_logout"


                        />
                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_stroke_primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>

            <Spinner
                android:id="@+id/spinnerclient"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_stroke_primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>

            <Spinner
                android:id="@+id/spinnerdelegete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/flDate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_stroke_primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp"

                android:text="@string/choose_date"
                android:gravity="start"
                android:textAlignment="viewStart"
                />
            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/no_notifications_to_show"
                android:visibility="gone"
                />

        </FrameLayout>
    </LinearLayout>

</layout>
